--- a/styles.css
+++ b/styles.css
@@ -65,7 +65,6 @@ header nav ul li a:hover {
   font-family: 'Playfair Display', serif;
 }
 
-
 .placeholder {
     background-color: white;
     color: #8c1313;
@@ -117,6 +116,14 @@ header nav ul li a:hover {
   margin-bottom: 10px;  
   font-family: 'Neue Haas Grotesk Display Pro', sans-serif;
   color: white;
+}
+
+.text-container q2 {
+  font-size: 24px;  
+  margin-top: 0;  
+  margin-bottom: 10px;  
+  font-family: 'Neue Haas Grotesk Display Pro', sans-serif;
+  color: #AE3737;
 }
 
 .responsive-img {
@@ -177,6 +184,7 @@ footer {
   background-color: #333;
   color: white;
   padding: 10px 
+}
 
 .amenities {
     background-color: #000000;
@@ -203,26 +211,29 @@ footer {
     display: block; /* Remove any extra space below the image */
 } -->
 
-
 .image-container2 {
   display: flex;
   justify-content: center; /* Centers all images horizontally */
   align-items: center; /* Vertically centers the images */
   width: 100%;
-  max-width: 1200px;
-  margin: 0 auto;
+  background-color: #AE3737; /* Add your desired background color */
+  margin: 30px auto;
+  gap: 80px;
+  padding: 10px 0;
 }
 
 .image-container2 img {
-  height: 672px;
-  width: 378px;
+  height: 384;
+  width: 216;
 }
 
 .testimonials {
-  background-color: white;
-  color: #8c1313;
+  all: unset;
+  flex-direction: column;
+  background-color: #AE3737;
+  color: white;
   padding: 40px 0;
-  max-width: 1200px; /* You can adjust this for the section's width */
+  max-width: 100%; /* You can adjust this for the section's width */
   margin: 0 auto; /* Centers the section */
   display: flex;
   justify-content: center; /* Centers content horizontally */
@@ -239,23 +250,21 @@ footer {
   max-width: 80%; /* Adjust for quote width */
 }
 
-.text-container .quote-left {
-  left: 10%; /* Positioned to the left */
-  top: 20%; /* Adjust the vertical positioning */
+.quotes-container {
+  display: flex;
+  justify-content: space-between; /* Space between the quotes */
+  gap: 20px; /* Space between each quote */
+  margin-top: 20px;
+  margin: 100px;
 }
 
-.text-container .quote-center {
-  left: 50%;
-  transform: translateX(-50%); /* Centers it horizontally */
-  bottom: 20%; /* Positioned towards the bottom */
+.quote {
+  font-size: 24px;
+  font-family: 'Neue Haas Grotesk Display Pro', sans-serif;
+  font-style: italic; /* Optional, makes quotes italic */
+  max-width: 30%; /* Ensures the quotes don't overflow */
+  text-align: center; /* Centers each quote */
 }
-
-.text-container .quote-right {
-  right: 10%; /* Positioned to the right */
-  top: 50%; /* Adjust for vertical alignment */
-}
-	
-
 
 
 
