--- a/styles.css
+++ b/styles.css
@@ -103,6 +103,13 @@ header nav ul li a:hover {
   font-weight: normal;
 }
 
+.text-container h3 {
+  font-size: 40px;  
+  margin-bottom: 3px; 
+  font-family: 'Playfair Display', serif;
+  font-weight: normal;
+}
+
 .text-container p {
   font-size: 24px;  
   margin-top: 0;  
@@ -266,6 +273,19 @@ footer {
   text-align: center; /* Centers each quote */
 }
 
+
+.title-section {
+  text-align: center;
+  margin: 40px 0; /* Add some space above and below */
+  color: #8c1313; /* Adjust color to match your theme */
+}
+
+.title-section h1 {
+  font-size: 54px;  
+  margin-bottom: 3px; 
+  font-family: 'Playfair Display', serif;
+  font-weight: normal;
+}
 
 
 
